feat:jsonファイルからメッセージを定義する処理を実装

--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -528,7 +528,7 @@ body {
 }
 
 .select-card-wrapper::after {
-  content: "クリック";
+  content: attr(data-click-hint);
   position: absolute;
   bottom: -8px;
   left: 50%;
